[gd_scene load_steps=3 format=3 uid="uid://dokjttj1w8qco"]

[ext_resource type="Theme" uid="uid://bmbj4fv1j3sbj" path="res://resources/selection_button.tres" id="1_hcpu2"]
[ext_resource type="Script" path="res://scripts/p_option.gd" id="2_jw3ll"]

[node name="p_option" type="Button"]
size_flags_vertical = 6
theme = ExtResource("1_hcpu2")
toggle_mode = true
text = "Spark Demon
Attack - 0
Speed - 0
Life - 0"
script = ExtResource("2_jw3ll")

[node name="option_icon" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_right = 170.0
offset_bottom = 160.0

[node name="option_type" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 810.0
offset_right = 970.0
offset_bottom = 160.0

[connection signal="button_down" from="." to="." method="_on_button_down"]
